K8's manifest file./backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elearning-backend
  labels:
    app: elearning-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: elearning-backend
  template:
    metadata:
      labels:
        app: elearning-backend
    spec:
      containers:
      - name: backend
        image: arthisuresh0210157/elearning-platform-using-mern-backend:latest
        ports:
        - containerPort: 5000
