K8's manifest file./backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  type: ClusterIP
  selector:
    app: elearning-backend
  ports:
  - port: 5000
    targetPort: 5000
    protocol: TCP
