K8's manifest file./frontend-service.yml

apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  type: LoadBalancer
  selector:
    app: elearning-frontend
  ports:
  - port: 3000          # External port exposed on ELB
    targetPort: 80      # Container port
    protocol: TCP
