K8's manifest file./service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: elearning-platform-service
  labels:
    app: elearning-platform
spec:
  selector:
    app: elearning-platform
  type: LoadBalancer
  ports:
  - name: frontend
    protocol: TCP
    port: 80
    targetPort: 3000
  - name: backend
    protocol: TCP
    port: 5000
    targetPort: 5000
