K8's manifest file./ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: elearning-platform-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: elearning.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: elearning-platform-service
            port:
              number: 80
